theme/static/css/style.css
/* ... */
.delivery-options li label span span,
.delivery-summary span {
    color: #d0d0d0;
    font-size: 11px;
    display: inline-block;
    position: relative;
    top: -2px;
}

.delivery-option {
    display: block;
    margin-top: 5px;
    float: left;
}

.qty-checkout {
    text-align: center;
}

.checkout td.cart-total {
    padding-right: 35px;
}

.checkout td {
    line-height: 20px;
}

.checkout-section.cart {
    padding: 12px 23px 14px 23px;
    background: #606060;
    color: #fff;
    margin: 0;
}

.checkout-subtotal {
    margin: 0 15px 0 5px;
    color: #808080;
    float: right;
}

.checkout-subtotal.summary {
    margin-top: 10px;
    padding-top: 10px;
    border-top: 1px solid #e0e0e0;
    width: 94.5%;
    position: relative;
    text-align: right;
}

.checkout-subtotal span {
    color: #606060;
    margin-left: 5px;
}

.payment-icons.checkout {
    float: none;
    top: 0;
    position: relative;
    display: block;
}

.payment-icons.checkout li {
    display: inline-block;
    float: left;
}

.payment-icons.checkout li img {
    margin: 0 4px 0 0;
    border: 1px solid #e0e0e0;
    padding: 3px;
    cursor: pointer;
}

.credit-card-fields span {
    display: inline;
    float: left;
    margin-right: 15px;
}

.credit-card-fields input {
    width: 305px;
    min-width: 100px;
}

.credit-card-fields select {
    min-width: 100px;
}

.order-totals-spacer {
    border-top: 1px solid #e0e0e0;
    padding: 10px 0;
}

.centered {
    margin: 0 auto!important;
    float: none!important;
    display: block!important;
}

.form-row-wide input {
    width: 100%;
}

.required {
    color: #d11c1c;
}

.rememberme {
    display: block;
    margin-top: 10px;
}

.rememberme {
    cursor: pointer;
}

.rememberme input {
    margin: 0 2px 0 0;
    top: 1px;
    display: inline-block;
}

.menu {
    position: relative;
    padding: 0;
    list-style: none;
    float: left;
    width: 100%;
    max-height: 50px;
    background-color: #606060;
    margin: 15px 0 25px 0;
    z-index: 99;
}

.menu .mega {
    position: absolute;
    display: none;
    top: 100%;
    left: 0;
}

.menu>li {
    float: left;
}

.menu li:hover>.mega,
.menu li.sfHover>.mega {
    display: block;
}

.menu>li>a {
    display: block;
    position: relative;
}

.menu>li .current {
    background-color: #505050;
}

.menu>li:hover .current,
.menu>li.sfHover .current {
    background-color: #808080;
}

.menu>li>a {
    color: #fff;
    padding: 17px 20px 15px 20px;
    display: inline-block;
    text-transform: uppercase;
    font-weight: 600;
}

.menu .homepage {
    text-indent: -9999px;
    display: block;
    width: 50px;
    height: 50px;
    padding: 0;
    background: url(../images/home.png) 50% no-repeat;
}

.menu>li:hover,
.menu>li.sfHover {
    background-color: #808080;
}

.menu>li.dropdown li.sfHover {
    background-color: #ededed;
}

.current,
.menu>li,
.menu>li:hover,
.menu>li.sfHover {
    -webkit-transition: background-color 0.15s ease-in-out;
    -moz-transition: background-color 0.15s ease-in-out;
    -o-transition: background-color 0.15s ease-in-out;
    -ms-transition: background-color 0.15s ease-in-out;
    transition: background-color 0.15s ease-in-out;
}

.mega {
    background-color: #fff;
    padding: 0;
    box-sizing: border-box;
    border: 1px solid #eaeaea;
    font-size: 14px;
}

.mega a {
    color: #909090;
    padding: 2px 0;
    display: block;
    margin-left: 12px;
    line-height: 19px;
    -webkit-transition: all 0.15s ease-in-out;
    ;
    -moz-transition: all 0.15s ease-in-out;
    ;
    -ms-transition: all 0.15s ease-in-out;
    ;
    -o-transition: all 0.15s ease-in-out;
    ;
    transition: all 0.15s ease-in-out;
    ;
}

.mega a:hover {
    color: #808080;
}

.mega-headline {
    background: #f0f0f0;
    color: #707070;
    font-weight: 600;
    display: block;
    padding: 8px 12px;
    margin-bottom: 8px;
}

.mega ul li p {
    padding: 0 12px;
}

.mega ul li p a {
    color: #808080;
    text-decoration: underline;
    display: inline-block;
    padding: 0;
    margin: 0;
}

.mega ul li p a:hover {
    color: #888;
}

.mega-container {
    margin-left: auto;
    margin-right: auto;
    width: 1136px;
    padding: 30px 22px;
}

.one-fourth-column,
.one-fourth-columns,
.one-column,
.one-columns,
.two-columns,
.three-columns,
.four-columns,
.five-columns,
.six-columns {
    display: inline-block;
    float: left;
    position: relative;
    margin-left: 8px;
    margin-right: 8px;
}

.mega-container .one-column {
    width: 173px;
}

.mega-container .one-columns {
    width: 173px;
}

.mega-container .two-columns {
    width: 362px;
}

.mega-container .one-fourth-column {
    width: 267px;
}

.mega-container .one-fourth-columns {
    width: 267px;
}

.mega-container .three-columns {
    width: 551px;
}

.mega-container .four-columns {
    width: 740px;
}

.mega-container .five-columns {
    width: 929px;
}

.mega-container .six-columns {
    width: 1118px;
}

@media only screen and (min-width: 960px) and (max-width: 1289px) {
    .mega-container {
        margin-left: auto;
        margin-right: auto;
        width: 894px;
    }
    .mega-container .one-column {
        width: 133px;
    }
    .mega-container .one-columns {
        width: 133px;
    }
    .mega-container .two-columns {
        width: 282px;
    }
    .mega-container .one-fourth-column {
        width: 207px;
    }
    .mega-container .one-fourth-columns {
        width: 207px;
    }
    .mega-container .three-columns {
        width: 431px;
    }
    .mega-container .four-columns {
        width: 580px;
    }
    .mega-container .five-columns {
        width: 729px;
    }
    .mega-container .six-columns {
        width: 878px;
    }
}
/* ... */

